--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@ to improve user experience to the product.</li>
       <div class="container">
 
         <div class="section-title">
-          <h2>Porjects &amp; other Information </h2>
+          <h2>Projects &amp; other Information </h2>
           <p>Welcome to my portfolio, a curated showcase of my skills and experience as a CRM Developer. Through this portfolio, I aim to demonstrate my proficiency in designing, developing, and implementing high-quality CRM solutions that drive business growth and enhance operational efficiency.</p><br>
-          <p class="font-weight">Please Click the below image to redirect to my Work, Certificates, Job Experience &amp; Porjects.</p><br>
+          <p class="font-weight">Please Click the below image to redirect to my Work, Certificates, Job Experience &amp; Projects.</p><br>
           <a href="https://www.linkedin.com/in/prathik-c-kulal-b99a35288/"><img src="./assets/img/linked.jpg" height="150px" width="150px"></a><br>
         </div><a href="https://github.com/Prathikckulal"><img src="./assets/img/gith.png" height="150px" width="150px"></a>
 
